@@ -7,7 +7,7 @@ Author: Laure Cougnaud
 Maintainer: Laure Cougnaud <laure.cougnaud@openanalytics.eu>
 Description: Creation of report with customizable visualization of patient profiles.
 Imports: ggplot2, plyr, cowplot, tools, reshape2, knitr, glpgStyle, grid, dplyr, stringr, glpgUtilityFct (>= 0.24.0), parallel, gridExtra, scales
-Suggests: pander, shiny, vdiffr, testthat, grDevices
+Suggests: pander, shiny, vdiffr, testthat, grDevices, rmarkdown
 License: file LICENSE
 RoxygenNote: 7.0.2
 VignetteBuilder: knitr
