@@ -62,4 +62,5 @@ importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,texi2pdf)
 importFrom(utils,head)
+importFrom(utils,packageVersion)
 importFrom(utils,tail)
